# ML_Logical_Regression

./: .gitignore  CustomLogisticRegression.py  README.md  main_new.py  main_old.py  pyproject.toml  requirements.txt  settings.py
Data/: A.csv  A_Y (1).csv  dataNew.csv  dataNew_2.csv  dataNew_3.csv  dataNew_4.csv  dataset_rec.csv  score.csv  test_dataset.csv  кандидат_2.csv
ml_logical_regression/: README.md  pyproject.toml
ml_logical_regression/ml_logical_regression/: CustomLogisticRegression.py  End_score.csv  create.sql  main.py  main_new.py  main_old.py  metrics_log.csv  settings.py  test.html  test_data.py
ml_logical_regression/ml_logical_regression/decorator/: decorators.py
ml_logical_regression/ml_logical_regression/Старые программы/: postgres_work.py  settings.py
