[tool.poetry]
name = "ml-logical-regression"
version = "0.1.0"
description = ""
authors = ["GEORGE <gera.evseev2001@gmil.com>"]
readme = "README.md"
packages = [{include = "ml_logical_regression"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
numpy = "^2.3.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
imbalanced-learn = "^0.13.0"
